--- a/tasks/createvm.yml
+++ b/tasks/createvm.yml
@@ -116,11 +116,19 @@
 
   - name: get boot Device UUID
     command: "blkid -s UUID -o value /dev/nbd0p2"
-    register: boot_device_uuid
+    register: _device_uuid
+
+  - name: set boot UUID
+    set_fact:
+      boot_device_uuid: "{{ _device_uuid.stdout }}"
 
   - name: get root Device UUID
     command: "blkid -s UUID -o value /dev/nbd0p3"
-    register: root_device_uuid
+    register: _device_uuid
+
+  - name: set root UUID
+    set_fact:
+      root_device_uuid: "{{ _device_uuid.stdout }}"
 
   - name: add fstab
     template:
