updated task name

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,7 +9,7 @@
     update_cache: yes
     cache_valid_time: 3600
 
-- name: install packages
+- name: install packages from backports
   apt: name={{item}} state=installed  default_release={{ ansible_distribution_release }}-backports dpkg_options='force-confnew,force-confdef'
   with_items: "{{ _package_list }}"
   when: hetzner_hypervisor_install_from_backports
