--- a/meta/main.yml
+++ b/meta/main.yml
@@ -13,6 +13,10 @@ galaxy_info:
       versions:
       - jessie
       - stretch
+    - name: Ubuntu
+      versions:
+      - trusty
+      - xenial
 
   galaxy_tags:
   - hetzner
