--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,8 +1,19 @@
 ---
 
-- name: set package list
+- name: fail hetzner_hypervisor when machine is not debian stretch or ubuntu xenial
+  fail:
+    msg: "host {{ansible_host}} is not of os type Debian Stretch or Ubuntu Xenial"
+  when: not ((ansible_distribution == 'Debian' and ansible_distribution_release == 'stretch') or (ansible_distribution == 'Ubuntu' and ansible_distribution_release == 'xenial'))
+
+- name: set package list debian
+  set_fact:
+    _package_list: "[ 'qemu-kvm', 'bridge-utils', 'uml-utilities', 'debootstrap', 'libvirt-daemon-system', 'libvirt-clients', 'eatmydata', 'virtinst']"
+  when: ansible_distribution == 'Debian'
+
+- name: set package list ubuntu
   set_fact:
     _package_list: "[ 'qemu-kvm', 'bridge-utils', 'uml-utilities', 'debootstrap', 'eatmydata', 'libvirt-bin', 'virtinst']"
+  when: ansible_distribution == 'Ubuntu'
 
 - name: apt-get update
   apt:
@@ -32,11 +43,11 @@
     line: "net.ipv4.ip_forward=1"
     state: present
 
-- name: activate ipv4 redirects
+- name: activate ipv4 redirects ubuntu
   lineinfile:
     dest: /etc/sysctl.conf
-    regexp: "^net.ipv4.conf.eth0.send_redirects"
-    line: "net.ipv4.conf.eth0.send_redirects=0"
+    regexp: "^net.ipv4.conf.{{ ansible_default_ipv4.interface }}.send_redirects"
+    line: "net.ipv4.conf.{{ ansible_default_ipv4.interface }}.send_redirects=0"
     state: present
 
 #- name: activate ipv6 forwarding
