--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -33,6 +33,7 @@
     regexp: "^net.ipv4.ip_forward"
     line: "net.ipv4.ip_forward=1"
     state: present
+  notify: restart networking
 
 - name: activate ipv4 redirects ubuntu
   lineinfile:
@@ -40,6 +41,7 @@
     regexp: "^net.ipv4.conf.{{ ansible_default_ipv4.interface }}.send_redirects"
     line: "net.ipv4.conf.{{ ansible_default_ipv4.interface }}.send_redirects=0"
     state: present
+  notify: restart networking
 
 #- name: activate ipv6 forwarding
 #  lineinfile:
@@ -59,7 +61,6 @@
     group: root
     mode: '0644'
     backup: yes
-  notify: restart networking
 
 - name: flush handler
   meta: flush_handlers
@@ -67,8 +68,14 @@
 - name: create storage pool
   include: createstoragepool.yml
 
-- name: create vms
-  include: createvm.yml
+- name: activate NetworkBlockDevice
+  modprobe:
+    name: nbd
+    state: present
+    params: 'max_part=16'
+
+- name: iterate vms
+  include: vm.yml
   with_items: "{{ hetzner_hypervisor_vms }}"
   loop_control:
     loop_var: vm
