--- a/tasks/createstoragepool.yml
+++ b/tasks/createstoragepool.yml
@@ -1,12 +1,12 @@
 ---
 
-- name: create iamges directory
+- name: create images directory
   file:
     path: "{{ hetzner_hypervisor_vms_path }}"
     state: directory
     mode: 0755
 
-- name: create iamges directory
+- name: create images directory
   file:
     path: /etc/libvirt/storage/autostart
     state: directory
