--- a/tasks/deletevm.yml
+++ b/tasks/deletevm.yml
@@ -8,14 +8,24 @@
   register: qcow_exists
 
 - block:
-  - name: shut down machine
-    command: "virsh shutdown {{ vm.name }}"
+
   # https://www.cyberciti.biz/faq/howto-linux-delete-a-running-vm-guest-on-kvm/
+  - name: shut down and destroy machine
+    command: "virsh destroy {{ vm.name }}"
+
+  - name: undefine machine
+    command: "virsh undefine {{ vm.name }}"
+
+  # keep snapshots in mind
+
   - name: delete volume if exists
-    command: "virsh vol-delete {{ hetzner_hypervisor_default_storage_pool }} {{ vm.name }}.qcow2"
+    command: "virsh vol-delete {{ vm.name }}.qcow2 {{ hetzner_hypervisor_default_storage_pool }}"
+
+  - name: delete route
+    command: "route del -host {{ vm.ip }} dev br0"
 
   # Block condition
-  when: qcow_exists.stat.exists == False
+  when: qcow_exists.stat.exists == True
 # Block end
 
 ...
