--- a/tasks/createvm.yml
+++ b/tasks/createvm.yml
@@ -322,7 +322,7 @@
              --console pty,target_type=virtio
 
   - name: add route
-    command: "route add -host {{ vm.ip }} dev br0"
+    command: "route add -host {{ vm.ip }} dev br0 2>/dev/null"
 
   # Block condition
   when: qcow_exists.stat.exists == False
